--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2025 Param Patel. University of Michigan ePortfolio.</p>
+            <p>&copy; <span id="year"></span> Param Patel. University of Michigan ePortfolio.</p>
         </div>
     </footer>
 
